infrastructure/kubernetes/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: http-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: http-server
  ports:
    - name: http
      port: 4000
      targetPort: http
